# task_2_ipfilter

./: .gitignore  CMakeLists.txt  common.h  filtered.tsv  gtest_ipfilter.cpp  gtest_ipfilter.h  gtest_ipfilter.h.in  ip_addr.cpp  ip_addr.h  ip_filter.cpp  ip_filter.h  ip_pool.cpp  ip_pool.h  main.cpp  not_filtered.tsv  str_tool.cpp  str_tool.h  version.h
.github/workflows/: Release.yml  cmake.yml
